# dedukti

./: .gitignore  Core.hs  Dedukti.hs  Europa.hs  Parser.hs  Pretty.hs  Setup.lhs  Test.hs  dedukti.cabal  europa.cabal  setpath.sh
Dedukti/: CodeGen.hs  Config.hs  Core.hs  DkM.hs  Module.hs  Parser.hs  Parser.hs-boot  Pretty.hs  Reduction.hs  Rule.hs  Runtime.hs
Dedukti/Analysis/: Dependency.hs  Rule.hs  Scope.hs
Dedukti/CodeGen/: Exts.hs
Dedukti/Driver/: Batch.hs  Compile.hs  Interactive.hs
Dedukti/Parser/: External.hs  Interface.hs  Prefix.hs
Dedukti/Synthesis/: ANF.hs  CC.hs
Europa/: CodeGen.hs  Config.hs  Core.hs  EuM.hs  Module.hs  Parser.hs  Pretty.hs  Rule.hs  Runtime.hs
Europa/Analysis/: Dependency.hs  Rule.hs  Scope.hs
Europa/CodeGen/: Exts.hs
Europa/Driver/: Batch.hs  Compile.hs  Interactive.hs
System/Console/: Option.hs
doc/: manual.info  manual.texi.in  mkfile  references.texi
lua/: dedukti.lua  tests.lua
scripts/: code-stats.sh  dkrun  eurun  extract-grammar.sh  measure-complexity.sh
t/: .gitignore  coc.eu  delta.eu  delta1.dk  delta1.eu  delta2.eu  f.eu  logic.eu  nat.eu  peano.dk  peano.eu  plus.dk  sigma.eu  sigma2.dk
t/coq/: Datatypes.eu
t/fold/: .arith.eu.swp  arith.dk  arith.eu  arithAnnot.dk
