name:           europa
version:        0.0
author:         Mathieu Boespflug
maintainer:     Mathieu Boespflug <mboes@lix.polytechnique.fr>
copyright:
    (c) 2009 Institut National de Recherche en Informatique et en Automatique.
homepage:       http://www.lix.polytechnique.fr/~mboes/src/europa.git
synopsis:       A type-checker for the λΠ-modulo calculus.
description:
    Europa is a proof checker for the λΠ-modulo calculus, a
    dependently typed λ-calculus with the addition of typed rewrite
    rules, capable of expressing proofs in Deduction Modulo [1].

    [1] G. Dowek, Th. Hardin, C. Kirchner, Theorem proving modulo,
    /Journal of Automated Reasoning/, 31, 2003, pp. 33-72.
category:       Theorem provers
license:        GPL
license-file:   COPYING
cabal-version:  >= 1.2.0
build-type:     Simple
tested-with:    GHC ==6.10


executable europa
  main-is:             Europa.hs
  other-modules:       Europa.Core, Europa.Parser, Europa.Pretty
  build-depends:       base >= 4, mtl >= 1.1, containers >= 0.2,
                       directory, filepath, process,
                       parsec >= 3.0.0, wl-pprint >= 1.0, bytestring >= 0.9.1.0,
                       haskell-src-exts >= 0.4.8 && < 0.5, Stream >= 0.3,
                       hmk >= 0.5
  extensions:          EmptyDataDecls, PatternGuards, GeneralizedNewtypeDeriving
                       DeriveDataTypeable, TypeFamilies, LiberalTypeSynonyms,
                       FlexibleInstances, FlexibleContexts, OverloadedStrings,
                       RecordWildCards, TypeSynonymInstances
  ghc-options:         -fwarn-unused-binds -fwarn-unused-imports

library
  exposed-modules:     Europa.Runtime
  extensions:          DeriveDataTypeable, PatternGuards, FlexibleInstances
  ghc-options:         -fwarn-unused-binds -fwarn-unused-imports
